--- a/frontend/register.html
+++ b/frontend/register.html
@@ -174,17 +174,17 @@
           </div>
         </div>
 
-        <div class="relative md:col-span-1">
+       <div class="floating-label-group">
           <input
             type="tel"
             id="regPhone"
-            class="floating-input-phone w-full p-5 bg-white border-2 border-gray-100 rounded-2xl outline-none focus:border-blue-900 transition-all font-bold text-sm"
+            placeholder=" "
+            class="floating-input w-full p-5 bg-white border-2 border-gray-100 rounded-2xl outline-none focus:border-blue-900 transition-all font-bold text-sm peer"
           />
-          <p
-            class="text-[8px] font-black text-gray-400 uppercase tracking-widest mt-2 ml-4"
+          <label
+            class="floating-label absolute top-5 left-5 text-gray-400 font-bold transition-all pointer-events-none uppercase tracking-widest text-xs"
+            >Enter a valid phone</label
           >
-            Global Standard Contact (Select Country)
-          </p>
         </div>
 
         <div class="relative">
