--- a/frontend/admin/orders.html
+++ b/frontend/admin/orders.html
@@ -226,6 +226,18 @@
             >Orders List</span
           >
         </a>
+         <a
+          href="queries.html"
+          class="flex items-center space-x-4 p-4 hover:bg-white/5 rounded-2xl transition-all group"
+        >
+          <i
+            class="fas fa-question-circle text-slate-500 group-hover:text-orange-500"
+          ></i>
+          <span
+            class="font-bold text-sm tracking-wide text-slate-400 group-hover:text-white"
+            >Query</span
+          >
+        </a>
       </nav>
       <a
         href="../index.html"
