--- a/frontend/index.html
+++ b/frontend/index.html
@@ -492,50 +492,29 @@
               </div>
             </div>
           </div>
-          <div
-            class="lg:col-span-2 bg-white p-8 md:p-12 rounded-[2.5rem] shadow-xl border border-gray-100"
-          >
-            <form class="grid md:grid-cols-2 gap-8">
-              <div class="space-y-2">
-                <label
-                  class="text-[10px] font-black text-blue-900 uppercase tracking-widest ml-1"
-                  >Your Name</label
-                >
-                <input
-                  type="text"
-                  placeholder="Full Name"
-                  class="w-full p-4 bg-gray-50 border-2 border-transparent rounded-2xl outline-none focus:bg-white focus:border-orange-500 transition-all font-bold text-sm"
-                />
-              </div>
-              <div class="space-y-2">
-                <label
-                  class="text-[10px] font-black text-blue-900 uppercase tracking-widest ml-1"
-                  >Email Address</label
-                >
-                <input
-                  type="email"
-                  placeholder="email@example.com"
-                  class="w-full p-4 bg-gray-50 border-2 border-transparent rounded-2xl outline-none focus:bg-white focus:border-orange-500 transition-all font-bold text-sm"
-                />
-              </div>
-              <div class="md:col-span-2 space-y-2">
-                <label
-                  class="text-[10px] font-black text-blue-900 uppercase tracking-widest ml-1"
-                  >Your Message</label
-                >
-                <input
-                  placeholder="How can we help you?"
-                  class="w-full p-4 bg-gray-50 border-2 border-transparent rounded-2xl outline-none focus:bg-white focus:border-orange-500 transition-all font-bold text-sm"
-                />
-              </div>
-              <button
-                type="submit"
-                class="md:col-span-2 bg-blue-900 text-white font-black py-5 rounded-2xl hover:bg-orange-500 transition-all shadow-xl uppercase tracking-widest text-sm transform active:scale-95"
-              >
-                Send Message
-              </button>
-            </form>
-          </div>
+          <div class="lg:col-span-2 bg-white p-8 md:p-12 rounded-[2.5rem] shadow-xl border border-gray-100">
+    <form id="queryForm" class="grid md:grid-cols-2 gap-8">
+        <div class="space-y-2">
+            <label class="text-[10px] font-black text-blue-900 uppercase tracking-widest ml-1">Your Name</label>
+            <input type="text" id="queryName" placeholder="Full Name" required
+                class="w-full p-4 bg-gray-50 border-2 border-transparent rounded-2xl outline-none focus:bg-white focus:border-orange-500 transition-all font-bold text-sm" />
+        </div>
+        <div class="space-y-2">
+            <label class="text-[10px] font-black text-blue-900 uppercase tracking-widest ml-1">Email Address</label>
+            <input type="email" id="queryEmail" placeholder="email@example.com" required
+                class="w-full p-4 bg-gray-50 border-2 border-transparent rounded-2xl outline-none focus:bg-white focus:border-orange-500 transition-all font-bold text-sm" />
+        </div>
+        <div class="md:col-span-2 space-y-2">
+            <label class="text-[10px] font-black text-blue-900 uppercase tracking-widest ml-1">Your Message</label>
+            <textarea id="queryMessage" placeholder="How can we help you?" required
+                class="w-full p-4 bg-gray-50 border-2 border-transparent rounded-2xl outline-none focus:bg-white focus:border-orange-500 transition-all font-bold text-sm h-32"></textarea>
+        </div>
+        <button type="submit" id="querySubmitBtn"
+            class="md:col-span-2 bg-blue-900 text-white font-black py-5 rounded-2xl hover:bg-orange-500 transition-all shadow-xl uppercase tracking-widest text-sm transform active:scale-95">
+            Send Message
+        </button>
+    </form>
+</div>
         </div>
       </div>
     </section>
